--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>...</title>
   </head>
   <body>
-    <script type="text/javascript">
-      location.href = "index.php";
-    </script>
+    <h2>현재 여기는 개발중입니다.</h2>
+    <p>coming soon this sites....</p>
   </body>
 </html>
